--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AuraZone's Smart Home</title>
+    <link rel="stylesheet" href="/style.css"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
 </head>
 <body>
-    start our project
+    <div class="wrapper">
+    <form action="">
+    <h1>Login</h1>
+    <div class="inputbox">
+        <input type="text" id="username" placeholder="Username" required>
+        <i class='bx bxs-user'></i>
+    </div>
+    <div class="inputbox">
+        <input type="password" id="password" placeholder="Password" required>
+        <i class='bx bxs-lock-alt'></i>
+    </div>
+    <div class="remember-forgot">
+        <label><input type="checkbox">Remember me</label>
+        <a href="#" >Forgot Password?</a> 
+    </div>
+    <button type="submit" class="btn" onclick="func()">Login</button>
+    <div class="register">
+        <p>Don't Have Account
+        <a href="#">Register</a></p>
+    </div>
+    </form>
+    </div>
 </body>
 </html>
+<script>
+    function func(){
+    var email = document.getElementById("username").value;
+    var password = document.getElementById("password").value;
+    if(email == 'krish2353' && password == 'krish123'){
+        alert("Login Successfull!!")
+        window.location.assign("project.html")
+    }
+    else{
+        alert("Wrong USername or Password!")
+    }
+    }
+</script>
