--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/style1.css">
-    <title>Ludiflex | Login & Registration</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/jpeg" href="Aurazone.jpeg">
+    <title>AuraZone's Smart Home</title>
 </head>
 <body>
  <div class="wrapper">
@@ -79,6 +80,7 @@
                     <i class="bx bx-user"></i>
                 </div>
             </div>
+           
             <div class="input-box">
                 <input type="text" class="input-field" placeholder="Email">
                 <i class="bx bx-envelope"></i>
